force-app/main/default/objects/AH_PLCM_Migration_User__c/AH_PLCM_Migration_User__c.object-meta.xml
<CustomObject>
    <description>Property Users information for Migration Property (data coming from Legacy Product)</description>
    <label>PLCM Migration User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PLCM Property User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLCM Migration Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>