force-app/main/default/objects/AH_PLCM_Migration_User__c/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Legacy Database name to which this migrating User is associated.</inlineHelpText>
    <label>Database Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>