force-app/main/default/objects/AH_PLCM_Migration_User__c/fields/PLCM_Migration_Property__c.field-meta.xml
<CustomField>
    <fullName>PLCM_Migration_Property__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>Migrating property to which this Property User is associated.</inlineHelpText>
    <label>PLCM Migration Property</label>
    <referenceTo>AH_PLCM_Migration_Property__c</referenceTo>
    <relationshipLabel>PLCM Migration Users</relationshipLabel>
    <relationshipName>PLCM_Property_Users</relationshipName>
    <type>Lookup</type>
</CustomField>