force-app/main/default/objects/AH_PLCM_Migration_User__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of legacy Site to which this migrating User is associated.</inlineHelpText>
    <label>Site ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>