force-app/main/default/objects/AH_PLCM_Migration_User__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Title of migrating user in legacy product.</inlineHelpText>
    <label>User Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>